--- a/app/src/main/res/layout/activity_scale_gradual.xml
+++ b/app/src/main/res/layout/activity_scale_gradual.xml
@@ -1,6 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_margin="10dp"
+              android:gravity="center_horizontal"
+              android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="缩放抖动： "
+    />
+    <ImageView
+        android:id="@+id/iv_heart"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/icon_heart_red"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="缩放抖动(属性动画)： "
+    />
+    <ImageView
+        android:id="@+id/iv_heart1"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/icon_heart_red"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="翻转动画： "
+    />
+
+    <TextView
+        android:id="@+id/tv_rotation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="中心旋转"
+        android:textSize="20dp"/>
+    <TextView
+        android:id="@+id/tv_rotation1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="X轴旋转"
+        android:textSize="20dp"/>
+    <TextView
+        android:id="@+id/tv_rotation2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Y轴旋转"
+        android:textSize="20dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="颜色渐变： "
+    />
+    <LinearLayout
+        android:id="@+id/ll_color"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_color"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="颜色渐变(平滑)"
+            android:textSize="20dp"/>
+        <TextView
+            android:id="@+id/tv_color1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="颜色渐变(跳跃)"
+            android:textSize="20dp"/>
+    </LinearLayout>
+</LinearLayout>
