--- a/app/src/main/res/layout/activity_heart.xml
+++ b/app/src/main/res/layout/activity_heart.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:src="@drawable/bg_liu"
     />
-    <cn.dbboy.commentlib.wedget.HeartLayout
+    <cn.dbboy.commentlib.widget.HeartLayout
         android:id="@+id/heart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,5 +22,5 @@
             android:layout_margin="30dp"
             android:background="@drawable/icon_like"
         />
-    </cn.dbboy.commentlib.wedget.HeartLayout>
+    </cn.dbboy.commentlib.widget.HeartLayout>
 </FrameLayout>
