--- a/app/src/main/res/layout/activity_heart.xml
+++ b/app/src/main/res/layout/activity_heart.xml
@@ -20,7 +20,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_margin="30dp"
-            android:background="@drawable/icon_like"
+            android:background="@drawable/selector_like"
         />
     </cn.dbboy.commentlib.widget.HeartLayout>
 </FrameLayout>
