--- a/app/src/main/res/layout/activity_tou.xml
+++ b/app/src/main/res/layout/activity_tou.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/icon_like"
+            android:src="@drawable/selector_like"
         />
         <com.sum.slike.SuperLikeLayout
             android:id="@+id/super_like_layout"
